# kvs

./: .dockerignore  README.md  docker-compose.yml
k8s/: additional.yaml  loadbalancer.yaml  shard.yaml
loadbalancer/: Dockerfile  main.py  pyproject.toml
shard/: Dockerfile  main.py  pyproject.toml
